[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "indigoscalytrapezoid"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
wikipedia = "^1.4"
discord = "^1.0"
python-dotenv = "^0.13.0"
[tool.poetry.dev-dependencies]
